--- a/doc/manual.css
+++ b/doc/manual.css
@@ -1,92 +1,315 @@
-body {
-  font-family: Times, Roman, "times new roman", serif;
-	background-color: #ffffff;
-	color: #0C1E28;
+  body {
+    font-size: small;
+    font-family: Verdana, sans-serif;
+    margin: 0;
+    padding: 0;
+    background: #eeeeee;
+  }
+
+  h1, h2 {
+    font-size: x-large;
+    font-family: Georgia, Times, serif;
+    clear: both;
+  }
+
+  h3, h4, h5, p.title {
+    font-size: medium;
+    font-weight: bold;
+    width: 70%;
+    border-bottom: 1px solid black;
+    letter-spacing: 2px;
+    margin-top: 30px;
+    clear: both;
+  }
+  
+  h3, h4 {
+    text-decoration: underline;
+    border: 0;
+    letter-spacing: normal;
+  }
+
+  dt {
+    clear: both;
+  }
+  
+  li {
+    clear: both;
+  }
+
+  div.itemizedlist li {
+    clear: none;
+  }
+  
+  .term { 
+    border-bottom: 1px dotted black; 
+    clear: both;
+  }
+
+
+
+  p {
+    display: block;
+    margin: 5px 0;
+    margin-bottom: 15px;
+    width: 70%;
+    min-width: 40em;
+  }
+  
+  .filename {
+    font-size: medium;
+    font-family: Courier, monospace;
+  }
+
+  /* don't display anchor tags with only an id attribute */
+  p a[id] {
+    margin: 0;
+    padding: 0;
+    display: inline;
+    background-image: none;
+  }
+  
+  p a, p a:hover, .mousebutton {
+    margin-left: 5px;
+    padding-left: 10px;
+    background-image: url("../images/link.png");
+    background-repeat: no-repeat;
+    background-position: center left;
+  }
+
+  p .guiicon {
+    position: relative;
+    top: 12px;
+  }
+  
+  dd {
+    margin: 5px 40px;
+    margin-right: 0;
+  }
+
+  hr {
+    border: 0px;
+    border-top: 1px solid black;
+    width: 70%;
+    margin-top: 20px;
+    padding-bottom: 10px;
+  }
+
+  a {
+    color: blue;
+    text-decoration: none;
+  }
+
+a:hover {
+  background: lightblue;
+  text-decoration: underline;
+  color: black;
 }
 
-p {
-  font-family: Times, Roman, "times new roman", serif;
-	background-color: #ffffff;
-	color: #0C1E28;
-}
 
-td {
-  font-family: Times, Roman, "times new roman", serif;
-	background-color: #ffffff;
-	color: #0C1E28;
-}
+  div.navheader {
+    background: #d6ba00;
+    color: black;
+    clear: both;
+  }
 
-a:link {
-	color: #404696;
-}
+  div.navfooter {
+    background: #d6ba00;
+    color: black;
+    clear: both;
+  }
 
-a:visited {
-	color: #627398;
-}
+  div.navheader table th {
+    font-family: Georgia, Times, serif;
+    font-size: x-large;
+  }
 
-pre {
-   font-family: courier,courier-new,fixed;
-}
+  div.navheader table th#chaptername {
+    font-family: Georgia, Times, serif;
+    font-size: large;
+  }
 
-tt {
-   font-family: courier,courier-new,fixed;
-}
+  div.navheader table, 
+  div.navfooter table {
+    border: 1px solid black;
+    border-left: 0;
+    border-right: 0;
+  }
 
-h1 {
-	font-family: Arial,Helvetica,sans-serif;
-	color: #6e8ae6;  
-	border: 1px solid #ffdb43;
-	border-width : 0 0 1 0;
-}
+  div.navheader table td a,
+  div.navfooter table td a {
+    color: #fff5b0;
+    text-decoration: none;
+  }
 
-h2 {
-   font-family: Arial,Helvetica,sans-serif;
-   color: #6e8ae6;
-}
+  /* normal text in the footer */
+  div.navfooter table td {
+    color: black;
+  }
+    
+  /* links in header and footer */
+  div.navheader table td a:hover,
+  div.navfooter table td a:hover {
+    text-decoration: underline;
+    background-color: transparent;
+  }
 
-h3 {
-   font-family: Arial,Helvetica,sans-serif;
-   color: #6e8ae6;
-}
+  div.navheader table td a:visited,
+  div.navfooter table td a:visited {
+    color: #686868;
+  }
 
-h4 {
-   font-family: Arial,Helvetica,sans-serif;
-   color: #6e8ae6;
-}
-h5 {
-   font-family: Arial,Helvetica,sans-serif;
-   color: #6e8ae6;
-}
-h6 {
-   font-family: Arial,Helvetica,sans-serif;
-   color: #6e8ae6;
-}
+  div.navheader hr, div.navfooter hr{
+    display: none;
+  }
+ 
+  div.book,
+  div.preface,
+  div.part,
+  div.chapter,
+  div.sect1, 
+  div.sect2,
+  div.sect3,
+  div.appendix, 
+  div.section, 
+  div.glossary,
+  div.bibliography {
+    margin: 3em;
+  }
 
-code {
-	font-family: courier,courier-new,fixed;
-	white-space: pre;
-}
+  /* table of contents */
+  div.toc {
+    border: 1px solid black;
+    padding: 0px 10px;
+    background-color: #fff9cd;
+    color: black;
+    margin-bottom: 1cm;
+    width: 70%;
+  }
 
-.note {
-	background-color: #ffdb43;
-	border: 1pt solid #6e8ae6;
-	padding: 4pt;
-	margin: 5pt;
-}
+  div.toc b { font-size: 140%; }
 
-.navbox {
-	background-color: #6e8ae6;
-	border: 1pt solid #ffdb43;
-	padding: 4pt;
-	margin: 5pt;
-	text-align: center;
-	font-family: Arial,Helvetica,sans-serif;
-}
+  div.toc a {
+    margin-left: 5px;
+    margin-bottom: 5px;
+  }
 
-.navbox a {
-   color: #ffffff;
-}
+  /* toc definitions for different sections and chapters */
+
+  div.book div.toc {
+    background-color: transparent;
+    border: 0;
+    padding: 0;
+    font-size: medium;
+  }
+
+  div.book div.toc .chapter a {
+    display: block;
+    border-bottom: 1px dotted black;
+  }
+
+  .procedure {
+    width: 90%;
+  }
+
+  .warning, .caution, .tip, .note {
+    min-width: 60%;
+    max-width: 70%;
+    padding: 0 0 0 10px;
+    margin: 10px 0;
+    clear: right;
+  }
+  
+  .warning {
+    border: 1px solid darkred;
+    background-color: #ff9999;
+  }
+
+  .caution {
+    border: 1px solid #827206;
+    background-color: #ffdd00;
+  }
+
+  .tip {
+    border: 1px solid darkblue;
+    background-color: #c3d4de;
+  }
+  
+  .note {
+    border: 1px solid darkgreen;
+    background-color: #b0e1a9;
+  }
+
+  .warning p {
+    min-width: 90%;
+  }
+
+  .caution p {
+    min-width: 90%;
+  }
+
+  .tip p {
+    min-width: 90%;
+  }
+
+  .note p {
+    min-width: 90%;
+  }
+
+
+
+
+
+
+  
+  .guilabel, .guimenu, .guisubmenu, .guimenuitem {
+    background-color: #eeeee6;
+    padding: 2px 5px;
+  }
+
+  b.keycap, .keycap {
+    background-color: #eeeee6;
+    padding: 1px 5px;
+    border: 1px solid #999999;
+    margin: 0 2px;
+  }
+
+  .acronym { text-transform: uppercase; }
+
+  .informaltable { 
+    width: 70%;
+    min-width: 50%;
+    margin: 5em 0;
+    }
+
+  .mousebutton {
+    background-image: url("../images/mousebutton.png");
+  }
+
+ 
+  .title {
+    clear: both;
+    }
+ 
+  div.caption {
+    font-weight: bold;
+  }
 
 td.seg {
 	padding-right: 15px;
+	vertical-align: top;
 }
+
+.segmentedlist {
+	margin: 10px;
+	padding: 10px;
+}
+
+.screen {
+	background: #000000;
+	color: #00FF00;
+	padding: 5px;
+	margin: 5px;
+	border: 1px dashed #00FF00;
+	width: 70%;
+}
+
