Changed the configure options chapter and added css styles for  	variablelist.
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@1483 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/doc/manual.css
+++ b/bluefish/doc/manual.css
@@ -313,3 +313,13 @@ td.seg {
 	width: 70%;
 }
 
+/* For variable lists, indentation of the term element */
+.term {
+	margin-left: 10px;
+}
+
+/* For variable lists, to display tip in blue */
+dt > SPAN[class="term"] > SPAN[class="emphasis"]  > em {
+	color: #6e8ae6;
+}
+
