--- a/doc/manual.css
+++ b/doc/manual.css
@@ -227,6 +227,7 @@ div.caption {
 	border: 1px solid #bbb;
 	background-color: #eee;
 	width: auto;
+	height: auto;
 }
 
 /* For variable lists, indentation of the term element */
