Changed font size for subtitle and copyright
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@1603 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/doc/manual.css
+++ b/bluefish/doc/manual.css
@@ -264,3 +264,19 @@ dt > SPAN[class="term"] > SPAN[class="emphasis"]  > em {
 	font-size: 12px;
 	font-weight: bold;
 }
+
+/* For book subtitle */
+h2.subtitle {
+	font-size:11px;
+	font-style:italic;	
+}
+
+/* For authors' names */
+h3.author {
+	font-size:small ;
+}
+
+/* For copyright */
+.copyright {
+	font-size:11px;
+}
