Adding decoration for revision history
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@1745 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/doc/manual.css
+++ b/bluefish/doc/manual.css
@@ -279,3 +279,19 @@ h3.author {
 .copyright {
 	font-size:11px;
 }
+
+/* For revision history */
+div.revhistory > table {
+	border: 0px hidden;
+	padding-bottom: 10px;
+}
+div.revhistory > table  > tr > th {
+	border: 0px hidden;
+	font-size: 11px;
+	padding: 0px;
+}
+div.revhistory > table > tr > td {
+	border: 0px hidden;
+	font-size: 11px;
+	padding-left: 5px;
+}
