--- a/bluefish-doc/stylesheets/manual.css
+++ b/bluefish-doc/stylesheets/manual.css
@@ -275,8 +275,8 @@ h3.author {
 	font-size:small ;
 }
 
-/* For copyright */
-.copyright {
+/* For copyright and pubdate */
+.copyright, .pubdate {
 	font-size:11px;
 }
 
