--- a/bluefish-doc/stylesheets/manual.css
+++ b/bluefish-doc/stylesheets/manual.css
@@ -3,73 +3,177 @@
 
 body {
 	font-size: 12px;
-	font-family: Verdana, sans-serif;
-	margin: 0;
-	padding: 0;
+	font-family: Verdana, Helvetica, Arial, sans-serif;
+	margin: 0px;
+	padding: 0px;
 	background: #fdfdfd;
 }
 
-h1, h2 {
-	font-size: x-large;
-	font-family: Georgia, Times, serif;
+
+h1, h2, h3, h4, h6, h7 {
+    font-family: Georgia, Times, serif;
+    color: #444444;
 }
 
-h3, h4, h5, p.title {
-	font-size: medium;
-	font-weight: bold;
-	width: 70%;
-	border-bottom: 1px solid black;
-	letter-spacing: 2px;
-	margin-top: 30px;
+/*Navigational headers and footers */
+div.navheader, div.navfooter {
+	font-family: Helvetica, Arial, Verdana, sans-serif;
+	background: #3366cc url(imgs/nav-bg.png) bottom repeat-x;
 }
 
-h3, h4 {
+div.navheader table, div.navfooter table {
+	font-size: 105%;
+	color: #DED2A8;
+	border: 1px solid #1A4BAB;
+	border-top: 1px solid #0D53DC;
+	padding-bottom: 1px;
+	padding-left: 3px;
+	padding-right: 3px;
+}
+
+div.navheader table td a, div.navfooter table td a {
+	color: #efefef;
 	text-decoration: underline;
-	border: 0;
-	letter-spacing: normal;
 }
 
-div.itemizedlist li {
-	clear: none;
+div.navheader hr, div.navfooter hr {
+	display: none;
 }
 
-.term { 
-	clear: both;
+/* Global margins */
+div.book, div.preface, div.chapter, div.sect1, div.sect2, div.sect3, div.appendix {
+	margin: 2em;
 }
 
-p {
-	display: block;
-	margin: 5px 0;
-	margin-bottom: 15px;
-	width: 70%;
-	min-width: 40em;
-	text-align: justify;
+/* Book, preface, chapter, appendix titles */
+div.titlepage h1.title, div.titlepage h2.title {
+    text-align: center;
 }
 
-.filename {
-	font-size: medium;
-	font-family: Courier, monospace;
+/* Book subtitle */
+div.book div.titlepage h2.subtitle {
+ 	font-family: Helvetica, Arial, Verdana, sans-serif;
+ 	font-style:italic;	
+   font-size: 75%;
+   text-align: center;
+   position: relative;
+   top: -15px;
 }
 
-/* don't display anchor tags with only an id attribute */
-p a[id] {
-	margin: 0;
-	padding: 0;
-	display: inline;
-	background-image: none;
+/* Authors' names */
+div.book div.titlepage h3.author {
+   font-family: Helvetica, Arial, Verdana, sans-serif;
+   font-size: 85%;
+   text-align: center;
 }
 
-dd {
-	margin: 5px 40px;
-	margin-right: 0;
+/* Other credits */
+div.book div.titlepage p.othercredit {
+   font-family: Helvetica, Arial, Verdana, sans-serif;
+   font-size: 85%;
+   font-weight: bold;
+   color: #444444;
+   text-align: center;
+}
+
+/* Revision history */
+div.revhistory table {
+	border: 0px hidden;
+	padding-top: 1em;
+	padding-bottom: 2em;
+	font-size: 80%;
+}
+div.revhistory > table  > tr > th {
+	border: 0px hidden;
+	padding: 0px;
+}
+div.revhistory > table > tr > td {
+	border: 0px hidden;
+	padding-left: 1em;
+}
+
+/* Copyright and pubdate */
+.copyright, .pubdate {
+	font-size: 80%;
+	text-align: center;
+}
+
+.pubdate, hr {
+   position: relative;
+   top: -10px;
 }
 
 hr {
 	border: 0px;
 	border-top: 1px solid black;
-	width: 70%;
-	margin-top: 20px;
-	padding-bottom: 10px;
+}
+
+/* Book's Table of contents */
+div.toc p, div.list-of-figures p, div.list-of-examples p, div.list-of-procedures p {
+   font-family: Helvetica, Arial, Verdana, sans-serif;
+   font-size: 110%;
+   color: #444444;
+	text-align: center;
+}
+
+ div.list-of-figures p, div.list-of-examples p, div.list-of-procedures p {
+   border-top: 1em hidden;
+}
+
+div.book div.toc .chapter a {
+	display: block;
+}
+
+div.book div.toc {
+	background-color: transparent;
+	border: 0px;
+	padding: 0px;
+}
+
+/* Chunked Book's Table of Contents */
+div.book h1 {
+	text-align: center;
+}
+
+/* Other tables of contents */
+div.toc {
+	border: 1px solid #3366cc;
+	padding: 0px 0.7em;
+	background-color: #e5ecf9;
+}
+
+/* Size of titles */
+div.chapter div.titlepage h2.title, div.preface div.titlepage h2.title, div.appendix div.titlepage h2.title {
+   font-size: 170%;
+}
+div.sect1 div.titlepage h2.title {
+   font-size: 150%;
+	text-align: left;
+}
+div.sect1 div.titlepage h3.title {
+   font-size: 130%;
+	text-align: left;
+}
+	
+div.itemizedlist li {
+	clear: none;
+}
+
+p {
+	text-align: justify;
+}
+
+.filename {
+	font-family: Courier, "Courier New", monospace;
+	font-size: 90%;
+}
+
+/* don't display anchor tags with only an id attribute */
+p a[id] {
+	margin: 0px;
+	padding: 0px;
+	display: inline;
+	background-image: none;
 }
 
 a {
@@ -79,172 +183,29 @@ a {
 
 a:hover {
 	text-decoration: underline;
-	font-weight: bold;
-}
-
-
-div.navheader, 
-div.navfooter {
-	background: #3366cc url(imgs/nav-bg.png) bottom repeat-x;
-}
-
-div.navheader table th {
-	color: black;
-	font-family: serif;
-	font-size: x-large;
-}
-
-div.navheader table th#chaptername {
-	color: lightyellow;
-	font-family: Georgia, Times, serif;
-	font-size: large;
-}
-
-div.navheader table, 
-div.navfooter table {
-	border: 1px solid black;
-	border-left: 0;
-	border-right: 0;
-}
-
-div.navheader table td a,
-div.navfooter table td a {
-	color: #efefef;
-	text-decoration: underline;
-}
-
-/* normal text in the footer */
-div.navfooter td {
-	color: #E4CA95;
-}
-	
-/* links in header and footer */
-div.navheader table td a:hover,
-div.navfooter table td a:hover {
-	text-decoration: underline;
-	background-color: transparent;
-}
-
-div.navheader table td a:visited,
-div.navfooter table td a:visited {
-	color: #efefef;
-}
-
-div.navheader hr, div.navfooter hr {
-	display: none;
-}
- 
-div.book,
-div.preface,
-div.part,
-div.chapter,
-div.sect1, 
-div.sect2,
-div.sect3,
-div.appendix, 
-div.section, 
-div.glossary,
-div.bibliography {
-	margin: 3em;
-}
-
-/* table of contents */
-div.toc {
-	border: 1px solid #3366cc;
-	padding: 0px 10px;
-	background-color: #e5ecf9;
-	color: black;
-	margin-bottom: 1cm;
-	width: 70%;
-}
-
-div.toc b { 
-	font-size: 140%;
-}
-
-div.toc a {
-	margin-left: 5px;
-	margin-bottom: 5px;
-}
-	
-/* toc definitions for different sections and chapters */
-div.book div.toc {
-	background-color: transparent;
-	border: 0;
-	padding: 0;
-	font-size: medium;
-}
-
-div.book div.toc .chapter a {
-	display: block;
-	border-bottom: 1px dotted black;
-}
-
-.procedure {
-	width: 90%;
-}
-
-.warning, .caution, .tip, .note {
-	min-width: 60%;
-	max-width: 70%;
-	padding: 0 0 0 10px;
-	margin: 10px 0;
-	clear: right;
-}
-
-.warning p {
-	min-width: 90%;
-}
-
-.caution p {
-	min-width: 90%;
-}
-
-.note p {
-	min-width: 90%;
 }
 
 .guimenu, .guimenuitem, .guilabel, .guisubmenu {
-	font-family: Courier;
-	font-size: 11px;
+	font-family: Courier, "Courier New", monospace;
+	font-size: 100%;
+	color: #806B38;
 	padding: 0px;
 }
 
-.title {
-	clear: both;
-}
- 
 div.caption {
 	font-weight: bold;
 }
 
 /* For command line commands given through the screen tag*/
 .screen {
-	font-size: medium;
-	padding: 5px;
-	margin: 5px;
-	border: 1px solid #bbb;
+	font-size: 100%;
+	padding: 0.2em 0.5em;
+	margin: 1em;
+	border: 1px solid #e8e8e8;
 	background-color: #eee;
-	width: auto;
-	height: auto;
 }
 
-/* For variable lists, indentation of the term element */
-.term {
-	margin-left: 10px;
-}
-
-.tip {
-	width: 40%;
-	border: 1px dotted #bbb;
-	background: #efefef;
-}
 .tip > .title {
-	margin-top: 10px;
-	font-size: small;
-	font-style: italic;
-	font-weight: normal;
-	text-decoration: none;
 	color: #3366cc;
 }
 
@@ -255,43 +216,46 @@ dt > SPAN[class="term"] > SPAN[class="emphasis"]  > em {
 
 /* For figure, to get a small margin */
 .figure {
-	margin-left: 5px;
+	margin-left: 0.7em;
 }
 
 /* For figures, examples and procedures, to get a small font */
 .figure > .title, .procedure > .title, .example > .title {
-	font-size: 12px;
+   font-family: Georgia, Times, serif;
+   font-size: 112%;
+   color: #444444;
 	font-weight: bold;
 }
 
-/* For book subtitle */
-h2.subtitle {
-	font-size:11px;
-	font-style:italic;	
+.screenshot {
+	position: relative;
+	top: -0.7em;
 }
 
-/* For authors' names */
-h3.author {
-	font-size:small ;
+/* Footnotes */
+div.footnotes p {
+	font-size: 80%;
+	display: inline;
+	position: relative;
+	top: -1em;
 }
 
-/* For copyright and pubdate */
-.copyright, .pubdate {
-	font-size:11px;
+/* Variable lists' titles */
+div.variablelist p.title {
+   font-family: Times, Georgia, serif;
+   color: #444444;
+	font-size: 117%;
 }
 
-/* For revision history */
-div.revhistory > table {
-	border: 0px hidden;
-	padding-bottom: 10px;
+dd {
+	margin-left: 2em;
 }
-div.revhistory > table  > tr > th {
-	border: 0px hidden;
-	font-size: 11px;
-	padding: 0px;
+
+/* For variable lists, indentation of the term element */
+.term {
+	margin-left: 1em;
 }
-div.revhistory > table > tr > td {
-	border: 0px hidden;
-	font-size: 11px;
-	padding-left: 5px;
+
+.command, .userinput {
+	font-size: 90%;
 }
